--- a/s.html
+++ b/s.html
@@ -25,16 +25,16 @@
 			camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 0.1, 1000 );
 			camera.position.set(0, 3, 10);
 			
-			const ambient = new THREE.HemisphereLight(0xffffbb, 0x080820);
-			//scene.add(ambient);
+			const ambient = new THREE.HemisphereLight(0x5588aa, 0x080820);
+			scene.add(ambient);
 			
-			const light = new THREE.DirectionalLight(0xFFFFFF, 0.5);
-			light.position.set( 1, 10, 6);
-			//scene.add(light);
-			
+			const light = new THREE.DirectionalLight(0xFFFFFF, 1);
+			light.position.set( 1, 10, 7);
+			scene.add(light);
 			renderer = new THREE.WebGLRenderer({antialias: true});
 			renderer.setSize( window.innerWidth, window.innerHeight );
-
+			
+			document.body.appendChild( renderer.domElement );
 			renderer.toneMapping = THREE.ACESFilmicToneMapping
 			renderer.toneMappingExposure = 4
 			renderer.outputEncoding = THREE.sRGBEndcoding
@@ -45,28 +45,35 @@
 			controls.target.set(0,4,0);
 			controls.update();
 
-			new RGBELoader().load("env2.hdr",function(texture){
+			renderer.setClearColor( 0xcccccc ); 
+
+			/* new RGBELoader().load("env2.hdr",function(texture){
 				 texture.mapping = THREE.EquirectangularReflectionMapping;
 				 scene.background = texture
 				 scene.environment = texture
-			})
-
+			}) */
+			//renderer.render( scene, camera );
 			const loader = new THREE.GLTFLoader();
             loader.load( 'untitled.glb', function ( gltf ) {
 				
                 scene.add( gltf.scene );
-				camera.lookAt( gltf );
+				//camera.lookAt( gltf );
 				let Auditorio = gltf.scene
-				Auditorio.position.y = 1.5;
+				Auditorio.position.y = 2;
+				Auditorio.position.x = 0.5;
+				camera.position.z = 10;
+				//update();
+				//renderer.render( scene, camera );
             }, undefined, function ( error ) {
 
                 console.error( error );
 
             } );
-			camera.position.z = 5;
-			renderer.render( scene, camera );
-			 
-  window.addEventListener( 'resize', resize, false);
+			
+			
+
+  
+window.addEventListener( 'resize', resize, false);
   
   update();
 }
@@ -80,10 +87,10 @@ function resize(){
   camera.aspect = window.innerWidth / window.innerHeight;
   camera.updateProjectionMatrix();
   renderer.setSize( window.innerWidth, window.innerHeight );
-
+}
   //raycaster
 
-  const raycaster = new THREE.Raycaster();
+/*   const raycaster = new THREE.Raycaster();
 
 const mouse = new THREE.Vector2();
 
@@ -98,8 +105,8 @@ function onMouseMove( event ) {
     mouse.y = - ( event.clientY / window.innerHeight ) * 2 + 1;
 
 }
-
-function render() {
+ */
+/* function render() {
 
     // update the picking ray with the camera and mouse position
 
@@ -120,9 +127,9 @@ function render() {
 }
 
 window.addEventListener( 'mousemove', onMouseMove, false );
-
-window.requestAnimationFrame(render);
-}
+ */
+/* window.requestAnimationFrame(render);
+} */
 
 
 init()
