--- a/s.html
+++ b/s.html
@@ -54,7 +54,7 @@
 			}) */
 			//renderer.render( scene, camera );
 			const loader = new THREE.GLTFLoader();
-            loader.load( 'untitled.glb', function ( gltf ) {
+            loader.load( 'titeration.glb', function ( gltf ) {
 				
                 scene.add( gltf.scene );
 				//camera.lookAt( gltf );
